--- a/docs/zh/guide/debugging/recorder/recorder.mdx
+++ b/docs/zh/guide/debugging/recorder/recorder.mdx
@@ -4,49 +4,48 @@ import { QRCodeSVG } from 'qrcode.react';
 import { CopyToClipboard } from 'react-copy-to-clipboard';
 import { Button, Toast } from '@douyinfe/semi-ui';
 
-# LynxRecorder
+# Recorder
 
-## Try LynxRecorder
+## 体验 Recorder
 
-LynxRecorder’s record and replay capabilities are already integrated by default in LynxExplorer. You can follow the steps below to experience them.
+在 LynxExplorer 中默认已经集成了 Recorder 的录制与回放能力，可以按照下面的步骤来进行体验。
 
 <Steps>
 
-### Download and install LynxExplorer
+### 下载安装 LynxExplorer
 
-Please visit [LynxExplorer](/guide/start/quick-start.html#prepare-lynx-explorer) and follow the documentation to run Lynx Explorer app locally.
+请访问 [LynxExplorer](/guide/start/quick-start.html#准备-lynx-explorer)，并按照文档说明运行Lynx Explorer。
 
-### Download and install Lynx Devtool Application
+### 下载安装 Lynx Devtool Application
 
-The Lynx Devtool Application integrates the LynxRecorder control plugin, making it easy to control page record, obtain recorded artifacts, and perform other related operations.
+Lynx Devtool Application 集成了 Recorder 控制插件，可以方便的进行页面录制控制、录制产物获取等操作。
+你可以访问 [Lynx DevTool](https://github.com/lynx-family/lynx-devtool/releases) 来获取 Lynx DevTool Application 的最新版本。
 
-You can visit [Lynx DevTool](https://github.com/lynx-family/lynx-devtool/releases) to get the latest version of Lynx DevTool desktop application.
+### 开启录制
 
-### Start record
-
-1. Connect the device to your PC via USB, and select the target application in the Tab.
+1. 将设备通过 USB 连接到 PC, 并在 Tab 中选中目标应用。
 
 <img
   src="https://lf-lynx.tiktok-cdns.com/obj/lynx-artifacts-oss-sg/plugin/static/device-connect.png"
-  alt="device-connect"
+  alt="设备连接"
   width={800}
 />
 
-2. Enter the LynxRecorder plugin dashboard and click the Start button to activate.
+2. 进入 Recorder 插件看板，点击 Start 按钮来启动 Recorder 的录制能力。
 
 <img
   src="https://lf-lynx.tiktok-cdns.com/obj/lynx-artifacts-oss-sg/plugin/static/start-record.gif"
-  alt="start-record"
+  alt="启动录制"
   width={800}
 />
 
-3. Operate on your phone, navigate to the target page you want to record and interact with it until it reaches the desired state.
+3. 随后进入需要录制的目标页面，对你的目标页面进行操作，使其达到预期的状态。
 
 :::note
-It is especially important to note that, in order to ensure the completeness of the recorded page data, please make sure to click Start **before** navigating to the target page.
+特别需要注意的是，为了确保页面录制数据的完整性，请确保先点击 Start，再进入目标页面。
 :::
 
-Here is a sample page that you can access by scanning the QR code or entering the link in LynxExplorer.
+这里提供了一个页面示例，你可以通过在 LynxExplorer 上扫码或者输入链接以进入，效果如下：
 
 <Go
   img="https://lf-lynx.tiktok-cdns.com/obj/lynx-artifacts-oss-sg/lynx-website/assets/galleryComplete.gif"
@@ -57,25 +56,25 @@ Here is a sample page that you can access by scanning the QR code or entering th
   schema="{{{url}}}?bar_color=000000&back_button_style=dark&title=Popular Furniture&title_color=ffffff"
 />
 
-5. Click the Stop button to end the record.
+5. 点击 Stop 按钮，结束录制。
 
-After stopping the record, the LynxRecorder dashboard will automatically retrieve the recorded artifact from your device and provide a preview image to help you easily identify the target page.
+点击结束录制后，Recorder 看板会自动从你的设备中获取录制产物，并提供预览图以更容易定位目标页面。
 
 <img
   src="https://lf-lynx.tiktok-cdns.com/obj/lynx-artifacts-oss-sg/plugin/static/end-record.png"
-  alt="end-record"
+  alt="结束录制"
   width={800}
 />
 
-### Page Replay
+### 回放展示
 
-1. Artifact Hosting
+1. 产物托管
 
-The Lynx DevTool Application only provides local file hosting for each recorded artifact. If you need to share the record artifact or access it across devices, you will need to host the artifact separately.
+Lynx DevTool Application 对于每次录制到的产物只提供了本地文件托管服务，如果你需要分享录制产物或者跨设备访问，则需要你将产物额外进行托管以确保可以访问。
 
-2. Replay using LynxExplorer
+2. 使用 LynxExplorer 回放
 
-Here is a sample recorded artifact that you can replay by scanning the QR code or entering the link in LynxExplorer.
+这里提供了一个录制产物实例，你可以使用 LynxExplorer 扫码回放。
 
 <div
   style={{
@@ -105,23 +104,21 @@ Here is a sample recorded artifact that you can replay by scanning the QR code o
 </div>
 
 :::note
-It is especially important to note that if you are using a self-hosted artifact URL for replay, you need to append the LynxRecorder Header to the artifact URL to indicate that the artifact is from LynxRecorder.
-
-Original artifact URL:
+特别需要注意的是，为了表明产物是一份 Recorder 产物，你需要在回放的时候将 Recorder Header 拼接到产物地址上。
 
 ```txt
+产物原始地址
+
 https://lynx.recorder.artifacts/LynxRecorder.json
-```
 
-Append the LynxRecorder Header:
+增加 Recorder Header
 
-```txt
 file://lynxrecorder?url=https://lynx.recorder.artifacts/LynxRecorder.json
 ```
 
 :::
 
-LynxExplorer can fully reproduce the recorded page.
+LynxExplorer 可以完整的复现录制页面效果。
 
 <div
   style={{
@@ -140,25 +137,25 @@ LynxExplorer can fully reproduce the recorded page.
 
 </Steps>
 
-## Integrate LynxRecorder into your own application
+## 在自己的应用中集成 Recorder
 
 <Steps>
 
-### Switch to the dev version
+### 切换 dev 版本
 
-Since the record and replay process of LynxRecorder covers the entire rendering process of Lynx and requires support from the underlying Lynx engine, we have released a separate dev version apart from the official Lynx release to prevent these record-related codes from affecting production environments. If you want to integrate LynxRecorder, you need to change the version numbers of both Lynx and LynxDevtool in your project to the corresponding dev versions. [integrate lynx dev version](/guide/start/integrate-lynx-dev-version.html)
+Recorder 录制与回放过程覆盖了 Lynx 整个渲染过程，需要 Lynx 底层做能力支持，为了避免这些录制逻辑影响到生产场景。我们独立于 Lynx 正式版本发布了对应的 dev 版本。如果需要接入 LynxRecorder 能力，你需要在自己的工程内将 Lynx 以及 LynxDevtool 版本号切换到对应的 dev 版本。[集成 Lynx 开发版本](/guide/start/integrate-lynx-dev-version.html)
 
-### Record capability integration
+### 录制能力集成
 
-The record capability can be integrated simply by using the dev version, with no additional adaptation required.
+录制能力只需通过接入 dev 版本集成即可，无需额外适配。
 
-### Replay capability integration
+### 回放能力集成
 
-LynxRecorder provides a highly encapsulated replay module, which is integrated into your application together with LynxDevTool. You only need to provide a simple entry point as described below.
+Recorder 提供了一个高度封装的回放模块，其随着 LynxDevTool 一并集成到你的应用，你只需要按照下面的方式提供简单的入口即可。
 
 #### Android
 
-1.  Add a LynxRecorder page entry
+1.  增加 Recorder 页面入口
 
 <Tabs groupId='integrate-lynxrecorder-to-android'>
 <Tab label="Java">
@@ -218,7 +215,7 @@ class MainActivity :Activity() {
 </Tab>
 </Tabs>
 
-2. Register LynxRecorderActivity in the app manifest file.
+2. 注册 LynxRecorderActivity
 
 ```xml
 // AndroidManifest.xml
@@ -229,7 +226,7 @@ class MainActivity :Activity() {
 
 #### iOS
 
-1. In the Podfile, additionally include LynxRecorder for the LynxDevtool module.
+1. 在你的应用 Podfile 中对 LynxDevtool 额外引入 LynxRecorder 模块
 
 ```ruby
 pod 'LynxDevtool', lynxDevVersion, :subspecs => [
@@ -238,13 +235,13 @@ pod 'LynxDevtool', lynxDevVersion, :subspecs => [
 ]
 ```
 
-2. Use LynxRecorderViewController to replay the recorded page.
+2. 使用 LynxRecorderViewController 回放录制页面
 
-:::note Swift integration considerations
+:::note Swift 工程接入注意事项
 
-LynxRecorder is written in Objective-C. If you want to call its methods from a Swift project, you need to provide a corresponding bridge file as described in [Importing Objective-C into Swift](https://developer.apple.com/documentation/swift/importing-objective-c-into-swift).
+Recorder 使用 objective-c 编写，如果 swift 工程想要调用对应的方法，需要参照 [Importing Objective-C into Swift](https://developer.apple.com/documentation/swift/importing-objective-c-into-swift) 提供对应的 bridge 文件。
 
-Add the following content to the bridge file:
+并在 bridge 文件中增加如下内容：
 
 ```swift
 #import <LynxDevtool/LynxRecorderViewController.h>
@@ -269,6 +266,7 @@ UINavigationController *nav = [[UINavigationController alloc] initWithRootViewCo
 <Tab label="Swift">
 
 ```swift
+
 let recorderVC = LynxRecorderViewController()
 recorderVC.url = "file://lynxrecorder?url=https://lynx.recorder.artifacts/LynxRecorder.json"
 present(recorderVC, animated: true, completion: nil)
